web/book/tests/documentation/snapshots/documentation__book__reference__syntax__literals__quoting-quotations__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from artists\nselect x = '\"hello world\"'\n"
---
SELECT
  '"hello world"' AS x
FROM
  artists

