web/book/tests/documentation/snapshots/documentation__book__reference__syntax__literals__quoting-quotations__3.snap
---
source: web/book/tests/documentation/book.rs
expression: "from artists\nselect x = \"\"\"\"\"I said \"\"\"hello world\"\"\"!\"\"\"\"\"\n"
---
SELECT
  'I said """hello world"""!' AS x
FROM
  artists

